# fskills

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ensure-english-consistency/: SKILL.md
expand-writing/: SKILL.md  rules.md
fix-precommit/: SKILL.md
generate-report/: SKILL.md  template.html
generate-report/scripts/: plots.py  style.py
inspect-data/: SKILL.md
inspect-data/scripts/: hdf5_inspector.py  hf_inspector.py  json_inspector.py  parquet_inspector.py
inspect-data/tests/: test_hf_inspector.py
review-paper/: SKILL.md
review-paper/scripts/: check_reference.py
tests/: conftest.py
tests/inspect-data/: conftest.py  test_hdf5_inspector.py  test_hf_inspector.py  test_json_inspector.py  test_parquet_inspector.py
